src/test/deca/syntax/valid/synt/Cast.deca
// Description:
//    Programme pour tester cast float->int
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    float a=5.5;
    int b=(int)(a);
}
